# open-manipulator-ros

./: readme.md
open_manipulation_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
open_manipulation_moveit_config/config/: controllers.yaml  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  open_manipulator.srdf  ros_controllers.yaml
open_manipulation_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  open_manipulator_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
open_manipulator_6dof_controller/launch/: open_manipulator_6dof_controller.launch  open_manipulator_6dof_moveit.launch
open_manipulator_6dof_controller/src/: open_manipulator_6dof_controller.cpp
open_manipulator_6dof_description/launch/: open_manipulator_6dof_rviz.launch
open_manipulator_6dof_description/urdf/: open_manipulator_6dof.gazebo.xacro  open_manipulator_6dof.urdf.xacro
open_manipulator_bringup/: CMakeLists.txt  package.xml
open_manipulator_bringup/launch/: open_manipulator_bringup.launch
open_manipulator_control/: CMakeLists.txt  package.xml
open_manipulator_control/config/: controllers.yaml
open_manipulator_control/include/open_manipulator_control/: open_manipulator_control.h  open_manipulator_hw_interface.h
open_manipulator_control/launch/: open_manipulator_gazebo_control.launch
open_manipulator_control/src/: open_manipulator_control.cpp  open_manipulator_control_node.cpp  open_manipulator_hw_interface.cpp
